@@ -25,9 +25,9 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2016112801;        // The current plugin version (Date: YYYYMMDDXX)
+$plugin->version   = 2016120901;        // The current plugin version (Date: YYYYMMDDXX)
 $plugin->requires  = 2015051100;        // Requires this Moodle version
 $plugin->component = 'filter_videoeasy'; // Full name of the plugin (used for diagnostics)
 $plugin->maturity  = MATURITY_STABLE;
-$plugin->release   = '1.1.13(Build 2016112801)';
+$plugin->release   = '1.1.14(Build 2016120901)';
 
